--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,55 @@
 version: '3'
 services:
   app:
-    image: decidim/decidim:0.28.1
+    build: .
     volumes:
-      - .:/app
-      - bundle:/usr/local/bundle
-      - node_modules:/app/node_modules
+      - ./entrypoint.sh:/app/entrypoint.sh
+      - ./db/seeds.rb:/app/db/seeds.rb
+      - ./tmp/pids:/app/tmp/pids
+    #   - .:/app
+    #   - bundle:/usr/local/bundle
+    #   - node_modules:/app/node_modules
     environment:
-      - PORT=3000
-      - DATABASE_HOST=pg
-      - DATABASE_USERNAME=postgres
-      - RAILS_ENV=development
+      - DATABASE_URL=postgres://postgres:decidim@db/decidim_capitalitat
+      - SECRET_KEY_BASE=02b1511d769fcf6aec3a816f202e524f7c0fd12080ebd3aa18cfbb141c4d1307213124e93cba1b1547c296f00c3ccaa9a5995e5b9747ba2cf91cde0fa5a44f19
+      - DECIDIM_FORCE_SSL=false
+      - QUEUE_ADAPTER=sidekiq
+      - REDIS_URL=redis://redis:6379/1
     ports:
       - 3000:3000
-    links:
-      - pg
-    command: bundle exec puma
-  pg:
-    image: postgres
+    depends_on:
+      - db
+      - redis
+  sidekiq:
+    build: .
     volumes:
-      - pg-data:/var/lib/postgresql/data
+      - ./entrypoint.sh:/app/entrypoint.sh
+    #   - .:/app
+    #   - bundle:/usr/local/bundle
+    #   - node_modules:/app/node_modules
+    environment:
+      - DATABASE_URL=postgres://postgres:decidim@db/decidim_capitalitat
+      - SECRET_KEY_BASE=02b1511d769fcf6aec3a816f202e524f7c0fd12080ebd3aa18cfbb141c4d1307213124e93cba1b1547c296f00c3ccaa9a5995e5b9747ba2cf91cde0fa5a44f19
+      - DECIDIM_FORCE_SSL=false
+      - QUEUE_ADAPTER=sidekiq
+      - REDIS_URL=redis://redis:6379/1
+      - RUN_SIDEKIQ=true
+    depends_on:
+      - redis
+  db:
+    image: postgres:13
+    ports:
+      - "54321:5432"
+    environment:
+      - POSTGRES_PASSWORD=decidim
+    volumes:
+      - pg_data:/var/lib/postgresql/data
+  redis:
+    image: redis
+    volumes:
+      - redis_data:/data
 volumes:
-  node_modules: {}
-  bundle: {}
-  pg-data: {}
+  pg_data:
+  redis_data:
+  # bundle:
+  # node_modules:
