--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 .envrc
 .rbenv-vars
 .rspec-failures
+coverage/*
 
 # Ignore the files and folders generated through Webpack
 /public/decidim-packs
