--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,8 @@
 .env
 .envrc
 .rbenv-vars
+.rspec-failures
+coverage/*
 
 # Ignore the files and folders generated through Webpack
 /public/decidim-packs
