--- a/package.json
+++ b/package.json
@@ -6,30 +6,56 @@
     "@decidim/core": "^0.28.1",
     "@decidim/elections": "^0.28.1",
     "@decidim/webpacker": "^0.28.1",
+    "@fullcalendar/core": "^6.1.13",
+    "@fullcalendar/daygrid": "^6.1.13",
+    "@fullcalendar/interaction": "^6.1.13",
+    "@fullcalendar/list": "^6.1.13",
+    "@fullcalendar/timegrid": "^6.1.13",
     "@rails/actioncable": "^6.1.7",
     "codemirror": "^5.65.16",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-standard": "^5.0.0",
     "form-storage": "^1.3.5",
     "formBuilder": "^3.19.7",
+    "frappe-gantt": "^0.6.1",
     "highlight.js": "^11.9.0",
     "inline-attacher": "^0.0.7",
     "jsrender": "^1.0.14",
     "leaflet.featuregroup.subgroup": "^1.0.2",
-    "tom-select": "^2.2.2"
+    "postcss": "^8.4.38",
+    "prettier": "^2.8.8",
+    "stylelint": "^15.11.0",
+    "stylelint-prettier": "^3.0.0",
+    "tom-select": "^2.2.2",
+    "webpack": "^5.91.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@babel/core": "^7.24.5",
     "@babel/eslint-parser": "^7.24.5",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/plugin-transform-classes": "^7.24.5",
     "@babel/plugin-transform-regenerator": "^7.24.1",
     "@babel/plugin-transform-runtime": "^7.24.3",
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
-    "@decidim/dev": "^0.28.0",
-    "@decidim/eslint-config": "^0.28.0",
+    "@decidim/dev": "^0.28.1",
+    "@decidim/eslint-config": "^0.28.1",
     "@decidim/prettier-config": "^0.28.0",
-    "@decidim/stylelint-config": "^0.28.0",
+    "@decidim/stylelint-config": "^0.28.1",
+    "eslint": "^8.57.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.10.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-react": "^7.34.1",
     "postcss-scss": "^4.0.9",
-    "sass-embedded": "~1.57.1"
+    "sass-embedded": "~1.57.1",
+    "webpack-dev-server": "^4.15.2"
   },
   "browserslist": [
     "extends @decidim/browserslist-config"
