--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,7 @@ coverage/*
 # Ignore the files and folders generated through Webpack
 /public/decidim-packs
 /public/packs-test
-/public/sw.js
-/public/sw.js.map
+/public/sw.js*
 
 # Ignore node modules
 /node_modules
