--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fullcalendar/timegrid": "^6.1.13",
     "@rails/actioncable": "^6.1.7",
     "codemirror": "^5.65.16",
+    "core-js": "^3.37.1",
     "form-storage": "^1.3.5",
     "formBuilder": "^3.19.7",
     "frappe-gantt": "^0.6.1",
