add secret conf

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -169,6 +169,8 @@ default: &default
     enabled: <%= Decidim::Env.new("VAPID_PUBLIC_KEY").to_boolean_string %>
     public_key: <%= ENV["VAPID_PUBLIC_KEY"] %>
     private_key: <%= ENV["VAPID_PRIVATE_KEY"] %>
+  colab:
+    auto_sync_oauth_to_assembly_members: <%= Decidim::Env.new("AUTO_SYNC_OAUTH_ASSEMBLY_MEMBERS").to_s %>
 
 development:
   <<: *default
