add identities sync job

--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -1,4 +1,4 @@
-:concurrency: <%= ENV.fetch("SIDEKIQ_CONCURRENCY", 5) %>
+:concurrency: <%= ENV.fetch("SIDEKIQ_CONCURRENCY", "5").to_i %>
 :queues:
   - [mailers, 4]
   - [invite_participants, 4]
