--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -173,7 +173,7 @@ default: &default
   colabs:
     identity_user_sync:
       assembly_slug: <%= Decidim::Env.new("IDENTITY_SYNC_ASSEMBLY_SLUG").to_s %>
-      provider: <%= Decidim::Env.new("IDENTITY_SYNC_PROVIDER").to_s %>
+      provider: <%= Decidim::Env.new("IDENTITY_SYNC_PROVIDER", "wpoauth").to_s %>
       options:
         position: <%= Decidim::Env.new("IDENTITY_SYNC_POSITION", "other").to_s %>
         position_other: <%= Decidim::Env.new("IDENTITY_SYNC_POSITION_OTHER", "Participant").to_s %>
