Sync oauth logins with members in a assembly (#13)
* add secret conf

* add identities sync job

* paginate members

* add specs and cron job

* add docs

--- a/config/schedule.yml
+++ b/config/schedule.yml
@@ -61,3 +61,11 @@ weekly_notifications_digest_job:
   status: <%= ENV.fetch("WEEKLY_NOTIFICATIONS_DIGEST", "enabled") %> # enabled by default
   args:
     task: decidim:mailers:notifications_digest_weekly
+
+hourly_oauth_sync_job:
+  cron: "0 * * * *"
+  class: "InvokeRakeTaskJob"
+  queue: default
+  status: <%= ENV["IDENTITY_SYNC_ASSEMBLY_SLUG"].present? ? "enabled" : "disabled" %>
+  args:
+    task: colabs:identity:sync
