--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -161,6 +161,7 @@ default: &default
     server: <%= ENV["ETHERPAD_SERVER"] %>
     api_key: <%= ENV["ETHERPAD_API_KEY"] %>
     api_version: <%= Decidim::Env.new("ETHERPAD_API_VERSION", "1.2.1") %>
+  rack_attack_skip: <%= ENV["RACK_ATTACK_SECRET"] %>
   elections:
     <<: *elections_default
   storage:
@@ -169,6 +170,13 @@ default: &default
     enabled: <%= Decidim::Env.new("VAPID_PUBLIC_KEY").to_boolean_string %>
     public_key: <%= ENV["VAPID_PUBLIC_KEY"] %>
     private_key: <%= ENV["VAPID_PRIVATE_KEY"] %>
+  colabs:
+    identity_user_sync:
+      assembly_slug: <%= Decidim::Env.new("IDENTITY_SYNC_ASSEMBLY_SLUG").to_s %>
+      provider: <%= Decidim::Env.new("IDENTITY_SYNC_PROVIDER", "wpoauth").to_s %>
+      options:
+        position: <%= Decidim::Env.new("IDENTITY_SYNC_POSITION", "other").to_s %>
+        position_other: <%= Decidim::Env.new("IDENTITY_SYNC_POSITION_OTHER", "Participant").to_s %>
 
 development:
   <<: *default
@@ -230,7 +238,6 @@ production:
     setup_minimum_hours_before_start: <%= Decidim::Env.new("ELECTIONS_SETUP_MINIMUM_HOURS_BEFORE_START", 1).to_i %>
     start_vote_maximum_hours_before_start: <%= Decidim::Env.new("ELECTIONS_START_VOTE_MAXIMUM_HOURS_BEFORE_START", 6).to_i %>
     voter_token_expiration_minutes: <%= Decidim::Env.new("ELECTIONS_VOTER_TOKEN_EXPIRATION_MINUTES", 120).to_i %>
-    document_types: <%= Decidim::Env.new("ELECTIONS_DOCUMENT_TYPES", "identification_number,passport").to_array.to_json %>
     votings:
       check_census_max_requests: <%= Decidim::Env.new("VOTINGS_CHECK_CENSUS_MAX_REQUESTS", 5).to_i %>
       throttling_period: <%= Decidim::Env.new("VOTINGS_THROTTLING_PERIOD", 1).to_i %>
