add azure translator

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -151,7 +151,7 @@ default: &default
       client_secret: <%= ENV["OMNIAUTH_GOOGLE_CLIENT_SECRET"] %>
   maps:
     dynamic_provider: <%= Decidim::Env.new("MAPS_DYNAMIC_PROVIDER", ENV["MAPS_PROVIDER"]).to_s %>
-    static_provider: <%= Decidim::Env.new("MAPS_STATIC_PROVIDER", ENV["MAPS_PROVIDER"]).to_s  %>
+    static_provider: <%= Decidim::Env.new("MAPS_STATIC_PROVIDER", ENV["MAPS_PROVIDER"]).to_s %>
     static_api_key: <%= Decidim::Env.new("MAPS_STATIC_API_KEY", ENV["MAPS_API_KEY"]).to_s %>
     dynamic_api_key: <%= Decidim::Env.new("MAPS_DYNAMIC_API_KEY", ENV["MAPS_API_KEY"]).to_s %>
     dynamic_url: <%= ENV["MAPS_DYNAMIC_URL"] %>
@@ -164,6 +164,9 @@ default: &default
     api_key: <%= ENV["ETHERPAD_API_KEY"] %>
     api_version: <%= Decidim::Env.new("ETHERPAD_API_VERSION", "1.2.1") %>
   rack_attack_skip: <%= ENV["RACK_ATTACK_SECRET"] %>
+  translator:
+    api_key: <%= ENV["TRANSLATOR_API_KEY"] %>
+    endpoint: <%= ENV["TRANSLATOR_ENDPOINT"] %>
   elections:
     <<: *elections_default
   storage:
