--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@decidim/core",
   "description": "The core dependencies for Decidim",
-  "version": "0.28.3",
+  "version": "0.28.4",
   "repository": {
     "url": "git@github.com:decidim/decidim.git",
     "type": "git",
@@ -12,7 +12,7 @@
   "dependencies": {
     "@picmo/popup-picker": "^5.8.4",
     "@rails/activestorage": "^6.0.4",
-    "@tarekraafat/autocomplete.js": "^10.2.6",
+    "@tarekraafat/autocomplete.js": "10.2.7",
     "@tiptap/core": "2.1.13",
     "@tiptap/extension-blockquote": "2.1.13",
     "@tiptap/extension-bold": "2.1.13",
