--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -231,6 +231,7 @@ production:
   smtp_port: <%= Decidim::Env.new("SMTP_PORT", 587).to_i %>
   smtp_starttls_auto: <%= Decidim::Env.new("SMTP_STARTTLS_AUTO").to_boolean_string %>
   smtp_authentication: <%= Decidim::Env.new("SMTP_AUTHENTICATION", "plain").to_s %>
+  smtp_ssl: <%= Decidim::Env.new("SMTP_SSL", false).to_boolean_string %>
   elections:
     bulletin_board_server: <%= ENV["BULLETIN_BOARD_SERVER"] %>
     bulletin_board_public_key: <%= ENV["BULLETIN_BOARD_PUBLIC_KEY"] %>
