--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,7 @@
 .rbenv-vars
 .rspec-failures
 coverage/*
+mise.toml
 
 # Ignore the files and folders generated through Webpack
 /public/decidim-packs
