--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
-    "@decidim/dev": "^0.28.0",
-    "@decidim/eslint-config": "^0.28.0",
-    "@decidim/prettier-config": "^0.28.0",
-    "@decidim/stylelint-config": "^0.28.0",
+    "@decidim/dev": "file:packages/dev",
+    "@decidim/eslint-config": "file:packages/eslint-config",
+    "@decidim/prettier-config": "file:packages/prettier-config",
+    "@decidim/stylelint-config": "file:packages/stylelint-config",
     "postcss-scss": "^4.0.9",
     "sass-embedded": "~1.57.1",
     "tailwindcss": "^3.4.1"
