--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,9 @@ jobs:
         with:
           fetch-depth: 1
 
+      - name: Install additional tools
+        run: sudo apt-get update && sudo apt-get install -y imagemagick p7zip wkhtmltopdf
+
       - uses: nanasess/setup-chromedriver@v2
         with:
           chromedriver-version: 119.0.6045.105
