--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@fullcalendar/list": "^6.1.13",
     "@fullcalendar/timegrid": "^6.1.13",
     "@rails/actioncable": "^6.1.710",
-    "codemirror": "^5.65.18",
     "core-js": "^3.37.1",
     "form-storage": "^1.3.5",
-    "formBuilder": "^3.19.12",
+    "formBuilder": "^3.20.0",
+    "formbuilder-languages": "^1.2.0",
     "frappe-gantt": "^0.6.1",
     "highlight.js": "^11.10.0",
     "inline-attacher": "^0.0.7",
-    "jsrender": "^1.0.15",
+    "jsrender": "^1.0.16",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "tom-select": "^2.2.2"
   },
