--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fullcalendar/list": "^6.1.13",
     "@fullcalendar/timegrid": "^6.1.13",
     "@rails/actioncable": "^6.1.710",
+    "@splidejs/splide": "^4.1.4",
     "core-js": "^3.37.1",
     "form-storage": "^1.3.5",
     "formBuilder": "^3.20.0",
